# skywalker2088

./: Cargo.toml  LICENSE  README-EN.md  README.md
.cargo/: config_fast_builds.toml
.github/workflows/: release.yaml
assets/: consumable_assets.assets.ron  effect_assets.assets.ron  item_assets.assets.ron  mob_assets.assets.ron  projectile_assets.assets.ron  ui_assets.assets.ron
assets/configs/: duolingo.csv
assets/data/: consumables.ron  effects.ron  items.ron  mob_segments.ron  mobs.ron  projectiles.ron
assets/images/: bolt.xml  button.xml  damage.xml  enemy.xml  lifeLogo.xml  numbers.xml  pill.xml  powerup.xml  shield.xml  ships.xml
docs/: design.md
docs/design/draw/: .$designs.drawio.bkp  designs.drawio
src/: assets.rs  audio.rs  config.rs  dev_tools.rs  lib.rs  main.rs
src/animation/: mod.rs
src/arena/: barrier.rs  gate.rs  mod.rs
src/assets/: audio.rs  audio_assets.rs  consumable.rs  effect.rs  enemy_assets.rs  game_assets.rs  item.rs  mob.rs  mod.rs  player_assets.rs  projectile.rs  ui.rs
src/camera/: mod.rs  screen_shake.rs
src/collision/: contact.rs  intersection.rs  mod.rs
src/components/: abilities.rs  audio.rs  character.rs  common.rs  enemies.rs  events.rs  game.rs  health.rs  input.rs  mod.rs  objectives.rs  player.rs  spawnable.rs  states.rs  weapon.rs
src/demo/: animation.rs  bullet.rs  enemy.rs  enemy_animation.rs  mod.rs  player.rs
src/enemy/: drone.rs  drone_boss.rs  fighter.rs  final_boss.rs  mod.rs  mothership.rs
src/gameplay/: animation.rs  camera.rs  control.rs  effects.rs  gamelogic.rs  hud.rs  level.rs  loot.rs  menu.rs  mod.rs  object.rs  physics.rs  player.rs  selection.rs  upgrade.rs
src/loot/: consumable.rs  mod.rs
src/options/: display.rs  input.rs  mod.rs  resources.rs
src/player/: batman.rs  mod.rs  spawn.rs
src/player/resources/: character.rs
src/player/systems/: abilities.rs  mod.rs  movement.rs  upgrades.rs
src/run/: formation.rs  gameplay.rs  level.rs  level_phase.rs  mod.rs  tutorial.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  main_menu.rs  mod.rs  splash.rs  title.rs
src/ship/: animation.rs  bullet.rs  engine.rs  mod.rs  platform.rs  turret.rs
src/spawnable/: behavior.rs  mod.rs
src/spawnable/consumable/: behavior.rs  mod.rs
src/spawnable/effect/: behavior.rs  mod.rs  spawn.rs
src/spawnable/item/: behavior.rs  mod.rs  spawn.rs
src/spawnable/mob/: behavior.rs  mod.rs
src/spawnable/mob/mob_segment/: behavior.rs  mod.rs
src/spawnable/projectile/: behavior.rs  mod.rs
src/stats/: historical_metrics.rs  metrics.rs  mod.rs  scanner.rs
src/theme/: csv.rs  interaction.rs  language.rs  localize.rs  mod.rs  widgets.rs
src/ui/: button.rs  character_selection.rs  game_over.rs  mod.rs  pause_menu.rs  player.rs  splash.rs  victory.rs
src/ui/game/: border_gradient.rs  game_center.rs  level.rs  mod.rs  parent.rs  phase.rs  player.rs
src/ui/main_menu/: button.rs  mod.rs
src/util/: colour.rs  layer.rs  math.rs
src/weapon/: mod.rs
web/: index.html
